tests/suite/typecheck/fail/tcfail186/Tcfail186.hs
-- Trac #1814

module Tcfail186 where

import Tcfail186_Help

foo = f "hoo"
